--- a/.github/workflows/webhooks.yml
+++ b/.github/workflows/webhooks.yml
@@ -13,4 +13,4 @@ jobs:
       run: |
         echo My name is P3TERX.
         echo Hello World!
-        echo ${{ github.event.client_payload }}
+        echo ${{ github.event.client_payload.url }}
