--- a/.github/workflows/webhooks.yml
+++ b/.github/workflows/webhooks.yml
@@ -1,8 +1,12 @@
 name: webHooks
 
-on: 
-  repository_dispatch:
-    types: seo
+# on: 
+#   repository_dispatch:
+#     types: seo
+on:
+  issues:
+    types: [opened, edited, milestoned]
+
 
 jobs:
   run:
@@ -13,4 +17,4 @@ jobs:
       run: |
         echo My name is P3TERX.
         echo Hello World!
-        echo ${{ github.event.client_payload.url }}
+        echo ${{ github.event.body }}
