--- a/.github/workflows/webhooks.yml
+++ b/.github/workflows/webhooks.yml
@@ -17,5 +17,7 @@ jobs:
       run: |
         echo My name is P3TERX.
         echo Hello World!
-        echo ${{ github.event.direction }}
-        echo ${{ github.event }}
+        echo ${{ github.event.repo }}
+        echo ${{ github.event.body }}
+        echo ${{ github.event.title }}
+        
