--- a/.github/workflows/webhooks.yml
+++ b/.github/workflows/webhooks.yml
@@ -20,6 +20,6 @@ jobs:
         echo ${{ github.issues.repo }}
         echo ${{ github.issues.body }}
         echo ${{ github.issues.title }}
-        echo ${{ GITHUB_EVENT_NAME }}
+        echo ${{ GITHUB.EVENT.NAME }}
         echo $PATH
         
