--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,4 +19,8 @@ jobs:
         go-version: 1.16
 
     - name: Test
-      run: date
+      env:
+        TEST: ${{ secrets.TEST_TOKEN }}
+      run: |
+        date
+        echo $TEST
